* www:  changed handbuilt release constant to 2.0. * doc:  changed handbuilt release constant to 2.0.

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@
 	* fixed documentation tools to use Python3.
 	* configure:  regenerated via autoreconf.
 	* Makefile.am:  install no longer installs pyc files.
+	* www:  changed handbuilt release constant to 2.0.
+	* doc:  changed handbuilt release constant to 2.0.
 
 2019-01-03	Gaius Mulley <gaius.mulley@southwales.ac.uk>
 
