--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2020-10-02	Gaius Mulley <gaius.mulley@southwales.ac.uk>
+
+	* INSTALL:  rewritten.
+
 2020-01-01	Gaius Mulley <gaius.mulley@southwales.ac.uk>
 
 	* release (2.0).  Huge number of changes and bug fixes.
