--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+touchgui (2.0.1-1.1) UNRELEASED; urgency=medium
+
+  * Non-maintainer upload.
+  * Touchgui released for Debian Buster.
+
+ -- Gaius Mulley <gaius@gnu.org>  Thu, 17 Sep 2020 12:47:44 +0100
+
 touchgui (2.0.0-1.0) UNRELEASED; urgency=medium
 
   * Release 2.0.0-1.0 generated.
