* INSTALL:  improved with download instruction and example tests.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2020-10-05	Gaius Mulley <gaius.mulley@southwales.ac.uk>
+
+	* INSTALL:  improved with download instruction and
+	example tests.
+
 2020-10-02	Gaius Mulley <gaius.mulley@southwales.ac.uk>
 
 	* INSTALL:  rewritten.
