--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2020-11-18	Gaius Mulley <gaius.mulley@southwales.ac.uk>
+
+	* touchgui.py:  (text_tile::color_tile) fills the surface
+	with the color.
+
 2020-11-12	Gaius Mulley <gaius.mulley@southwales.ac.uk>
 
 	* touchgui.py:  (text_tile::get_pos) added.
